# UnifAI

./: README.md  langtest.py  ollamafuncs.py  opanaicaller.py  pyproject.toml  requirements.txt  setup.py
src/simplifai/: Untitled-1.py  __init__.py  _convert_types.py  _types.py  anthropic_wrapper.py  baseaiclientwrapper.py  ollama_wrapper.py  openai_wrapper.py  simplifai.py
src/unifai/: Untitled-2.json  __init__.py  _convert_types.py  _exceptions.py  _exceptions_old.py  _types.py  anthropic_wrapper.py  baseaiclientwrapper.py  ollama_wrapper.py  openai_wrapper.py  unifai.py
tests/: basetest.py  test_chat.py  test_chat_stream.py  test_chat_switch_providers.py  test_convert_types.py  test_decorators.py  test_embeddings.py  test_evaluate.py  test_exceptions.py  test_images.py  test_imports.py  test_list_models.py  test_prompt_template.py  test_rag_engine.py  test_reranker.py  test_tool_from_pydantic.py  test_vector_db.py
tests/chat/: __init__.py  test_chat.py  test_chat_stream.py  test_chat_switch_providers.py
tests/document_chunker/: test_document_chunker.py
tests/document_db/: test_document_db.py
tests/document_loader/: test_document_loader.py
tests/embed/: test_embeddings.py
tests/examples/: _provider_defaults.py  ai_conversation.py  ai_convo2_are_you.py  gita_embed.py  gita_rag.py  leetcoder.py  leetcoder2.py  mansplain.py  mansplain_simple.py  multi_provider_chat.py  nested_ui_def_ref.py  redarena.py  streaming.py
tests/exceptions/: test_exceptions.py
tests/functions/: test_function_paramspecs.py  test_functions.py
tests/images/: test_images.py
(+267 files in other folders)
