[build-system]
requires = ["setuptools>=42", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Lucas Faudman", email = "lucasfaudman@gmail.com"}]
dynamic = ["classifiers"]
name = "simplifai"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
description = ""
keywords = []
dependencies = [
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/LucasFaudman/simplifai.git"
Repository = "https://github.com/LucasFaudman/simplifai.git"

[project.scripts]

[project.optional-dependencies]
dev = ["pytest"]
openai = ["openai"]
ollama = ["ollama"]
anthropic = ["anthropic"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/simplifai/_version.py"

[tool.black]
line-length = 120
